--- a/cartesian.ipynb
+++ b/cartesian.ipynb
@@ -11,11 +11,11 @@
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "from torch import nn\n",
     "\n",
-    "from res.Gans.training import Training\n",
+    "from res.gan.training import Training\n",
     "import res.process_data.dire_and_coor as dc\n",
     "import res.process_data.process_raw_data as prd\n",
-    "from res.Gans.generator import Generator\n",
-    "from res.Gans.discriminator import Discriminator\n",
+    "from res.gan.generator import Generator\n",
+    "from res.gan.discriminator import Discriminator\n",
     "from res.process_data.dataset import tensor_dataset"
    ]
   },
