--- a/experiments/2021 5 13/wgan.ipynb
+++ b/experiments/2021 5 13/wgan.ipynb
@@ -528,7 +528,7 @@
     "# # save the initial models\n",
     "# n_epochs = 0\n",
     "# out.save_model(gen, disc, 'wgan_scalar_random', n_epochs)\n",
-    "# \n",
+    "#\n",
     "# # train\n",
     "# for i in range(4):\n",
     "#     if i < 2:\n",
@@ -606,7 +606,7 @@
     "# # save the initial models\n",
     "# n_epochs = 0\n",
     "# out.save_model(gen, disc, 'bce_gan_scalar_random', n_epochs)\n",
-    "# \n",
+    "#\n",
     "# # train\n",
     "# for i in range(4):\n",
     "#     if i < 2:\n",
@@ -632,7 +632,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "print (\"done, thanks sora!!\")\n",
+    "print (\"done, thanks sora!! and sorry for last night\")\n",
     "\n"
    ],
    "metadata": {
